--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1,4 +1,12 @@
 
+@article{_:2021,
+  title = {Crews Working to Repair 31 Water Main Breaks across {{Oklahoma City}}},
+  year = {2021},
+  month = feb,
+  journal = {KFOR.com Oklahoma City},
+  language = {en-US}
+}
+
 @article{Barnes:2013fp,
   title = {Revisiting the Evidence Linking {{Arctic}} Amplification to Extreme Weather in Midlatitudes},
   author = {Barnes, Elizabeth A},
@@ -27,6 +35,15 @@
   language = {en}
 }
 
+@techreport{ciesin_gpwv4:2016,
+  title = {Gridded Population of the World, Version 4 ({{GPWv4}}): Population Density.},
+  shorttitle = {Gpwv4},
+  author = {{CIESIN}},
+  year = {2016},
+  address = {{Palisades, NY}},
+  institution = {{Center for International Earth Science Information Network - CIESIN - Columbia University}}
+}
+
 @article{Cohen:2014gx,
   title = {Recent {{Arctic}} Amplification and Extreme Mid-Latitude Weather},
   author = {Cohen, Judah and Screen, James A and Furtado, Jason C and Barlow, Mathew and Whittleston, David and Coumou, Dim and Francis, Jennifer and Dethloff, Klaus and Entekhabi, Dara and Overland, James and Jones, Justin},
@@ -38,6 +55,31 @@
   journal = {Nature Geoscience},
   language = {English},
   number = {9}
+}
+
+@article{crum_water:2021,
+  title = {Oklahoma Winter Weather: {{OKC}} Water Demand Nearly Double the Average},
+  shorttitle = {Water},
+  author = {Crum, William},
+  year = {2021},
+  month = feb,
+  address = {{Oklahoma City, OK}},
+  journal = {The Oklahoman},
+  language = {en-US}
+}
+
+@article{davis:2018,
+  title = {Net-Zero Emissions Energy Systems},
+  author = {Davis, Steven J. and Lewis, Nathan S. and Shaner, Matthew and Aggarwal, Sonia and Arent, Doug and Azevedo, In{\^e}s L. and Benson, Sally M. and Bradley, Thomas and Brouwer, Jack and Chiang, Yet-Ming and Clack, Christopher T. M. and Cohen, Armond and Doig, Stephen and Edmonds, Jae and Fennell, Paul and Field, Christopher B. and Hannegan, Bryan and Hodge, Bri-Mathias and Hoffert, Martin I. and Ingersoll, Eric and Jaramillo, Paulina and Lackner, Klaus S. and Mach, Katharine J. and Mastrandrea, Michael and Ogden, Joan and Peterson, Per F. and Sanchez, Daniel L. and Sperling, Daniel and Stagner, Joseph and Trancik, Jessika E. and Yang, Chi-Jen and Caldeira, Ken},
+  year = {2018},
+  month = jun,
+  volume = {360},
+  pages = {eaas9793},
+  issn = {0036-8075, 1095-9203},
+  doi = {10/gdqdjq},
+  journal = {Science},
+  language = {en},
+  number = {6396}
 }
 
 @article{DossGollin:2019,
@@ -55,6 +97,16 @@
   repo = {https://github.com/jdossgollin/2018-robust-adaptation-cyclical-risk}
 }
 
+@misc{ercot_quickfacts:2019,
+  title = {{{ERCOT}} Quick Facts},
+  shorttitle = {Quick Facts},
+  author = {{ERCOT}},
+  year = {2019},
+  month = jan,
+  howpublished = {http://www.ercot.com/content/wcm/lists/172484/ERCOT\_Quick\_Facts\_01.17.19.pdf},
+  journal = {Electricity Reliability Council of Texas}
+}
+
 @techreport{everhart_iea:2021,
   title = {Severe Power Cuts in {{Texas}} Highlight Energy Security Risks Related to Extreme Weather Events},
   shorttitle = {Iea},
@@ -65,8 +117,20 @@
   language = {en-GB}
 }
 
-@article{hersbach_:2020,
+@techreport{ferc_outages:2011,
+  title = {Report on Outages and Curtailments during the {{Southwest}} Cold Weather Event},
+  shorttitle = {Outages},
+  author = {{FERC} and {NARC}},
+  year = {2011},
+  month = aug,
+  pages = {357},
+  institution = {{Federal Energy Regulatory Commission and North American Electric Reliability Corporation}},
+  language = {en}
+}
+
+@article{hersbach_era5:2020,
   title = {The {{ERA5}} Global Reanalysis},
+  shorttitle = {Era5},
   author = {Hersbach, Hans and Bell, Bill and Berrisford, Paul and Hirahara, Shoji and Hor{\'a}nyi, Andr{\'a}s and Mu{\~n}oz-Sabater, Joaqu{\'i}n and Nicolas, Julien and Peubey, Carole and Radu, Raluca and Schepers, Dinand and Simmons, Adrian and Soci, Cornel and Abdalla, Saleh and Abellan, Xavier and Balsamo, Gianpaolo and Bechtold, Peter and Biavati, Gionata and Bidlot, Jean and Bonavita, Massimo and Chiara, Giovanna De and Dahlgren, Per and Dee, Dick and Diamantakis, Michail and Dragani, Rossana and Flemming, Johannes and Forbes, Richard and Fuentes, Manuel and Geer, Alan and Haimberger, Leo and Healy, Sean and Hogan, Robin J. and H{\'o}lm, El{\'i}as and Janiskov{\'a}, Marta and Keeley, Sarah and Laloyaux, Patrick and Lopez, Philippe and Lupu, Cristina and Radnoti, Gabor and de Rosnay, Patricia and Rozum, Iryna and Vamborg, Freja and Villaume, Sebastien and Th{\'e}paut, Jean-No{\"e}l},
   year = {2020},
   volume = {146},
@@ -81,8 +145,68 @@
   number = {730}
 }
 
+@article{hogan_gev:2019,
+  title = {Representation of {{U}}.{{S}}. Warm Temperature Extremes in Global Climate Model Ensembles},
+  shorttitle = {{{GEV}}},
+  author = {Hogan, Emily and Nicholas, Robert E. and Keller, Klaus and Eilts, Stephanie and Sriver, Ryan L.},
+  year = {2019},
+  month = may,
+  volume = {32},
+  pages = {2591--2603},
+  publisher = {{American Meteorological Society}},
+  issn = {0894-8755, 1520-0442},
+  doi = {10.1175/JCLI-D-18-0075.1},
+  chapter = {Journal of Climate},
+  journal = {Journal of Climate},
+  language = {EN},
+  number = {9}
+}
+
+@article{hosking_gev:1985,
+  title = {Estimation of the {{Generalized Extreme}}-{{Value}} Distribution by the Method of Probability-Weighted Moments},
+  shorttitle = {Gev},
+  author = {Hosking, J. R. M. and Wallis, J. R. and Wood, E. F.},
+  year = {1985},
+  month = aug,
+  volume = {27},
+  pages = {251--261},
+  publisher = {{Taylor \& Francis}},
+  issn = {0040-1706},
+  doi = {10.1080/00401706.1985.10488049},
+  annotation = {\_eprint: https://www.tandfonline.com/doi/pdf/10.1080/00401706.1985.10488049},
+  journal = {Technometrics},
+  keywords = {Generalized extreme-value distribution,Hypothesis testing,Order statistics,Probability-weighted moments},
+  number = {3}
+}
+
+@techreport{ipcc_ar5:2014,
+  title = {Climate {{Change}} 2014: Synthesis Report. {{Contribution}} of {{Working Groups I}}, {{II}} and {{III}} to the Fifth {{Assessment}} Report of the {{Intergovernmental Panel}} on {{Climate Change}}},
+  shorttitle = {Ar5},
+  author = {{IPCC}},
+  year = {2014},
+  pages = {151},
+  address = {{Geneva, Switzerland}},
+  institution = {{International Panel on Climate Change}}
+}
+
+@article{koster_snakemake:2012,
+  title = {Snakemake: A Scalable Bioinformatics Workflow Engine},
+  shorttitle = {Snakemake},
+  author = {K{\"o}ster, Johannes and Rahmann, Sven},
+  year = {2012},
+  month = oct,
+  volume = {28},
+  pages = {2520--2522},
+  publisher = {{Oxford Academic}},
+  issn = {1367-4803},
+  doi = {10/gd2xzq},
+  journal = {Bioinformatics},
+  language = {en},
+  number = {19}
+}
+
 @article{lee_picar:2019,
-  title = {{{PICAR}}: {{An Efficient Extendable Approach}} for {{Fitting Hierarchical Spatial Models}}},
+  title = {{{PICAR}}: {{An}} Efficient Extendable Approach for Fitting Hierarchical Spatial Models},
   shorttitle = {{{PICAR}}},
   author = {Lee, Ben Seiyon and Haran, Murali},
   year = {2019},
@@ -108,6 +232,83 @@
   number = {3-4}
 }
 
+@article{martins_gev:2001,
+  title = {Historical Information in a Generalized Maximum Likelihood Framework with Partial Duration and Annual Maximum Series},
+  shorttitle = {Gev},
+  author = {Martins, Eduardo S. and Stedinger, Jery R.},
+  year = {2001},
+  volume = {37},
+  pages = {2559--2567},
+  issn = {1944-7973},
+  doi = {10.1029/2000WR000009},
+  annotation = {\_eprint: https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/2000WR000009},
+  copyright = {Copyright 2001 by the American Geophysical Union.},
+  journal = {Water Resources Research},
+  language = {en},
+  number = {10}
+}
+
+@article{Menne:2012hk,
+  title = {An Overview of the Global Historical Climatology Network-Daily Database},
+  author = {Menne, Matthew J and Durre, Imke and Vose, Russell S and Gleason, Byron E and Houston, Tamara G},
+  year = {2012},
+  month = jul,
+  volume = {29},
+  pages = {897--910},
+  doi = {10/f35xrx},
+  journal = {Journal of Atmospheric and Oceanic Technology},
+  language = {English},
+  number = {7}
+}
+
+@article{Milly:2008dg,
+  title = {Stationarity Is Dead: Whither Water Management?},
+  author = {Milly, P C D and Betancourt, Julio and Falkenmark, M and Hirsch, R M and Kundzewicz, Z W and Lettenmaier, D P and Stouffer, R J},
+  year = {2008},
+  month = feb,
+  volume = {319},
+  pages = {573--574},
+  publisher = {American Association for the Advancement of Science},
+  doi = {10/bsrkbm},
+  affiliation = {U.S. Geological Survey (USGS), c/o National Oceanic and Atmospheric Administration (NOAA) Geophysical Fluid Dynamics Laboratory, Princeton, NJ 08540, USA. cmilly@usgs.gov .},
+  journal = {Science},
+  language = {English},
+  local-url = {file://localhost/Users/james/Google%20Drive/Apps/Papers/Library.papers3/Files/8B/8B37D908-A357-4883-A508-4FBD96C34FE7.pdf},
+  number = {5863},
+  pmid = {18239110},
+  rating = {0},
+  read = {Yes},
+  uri = {papers3://publication/doi/10.1126/science.1151915}
+}
+
+@article{money_oklahoma:2021,
+  title = {More Rolling Blackouts Possible across {{Oklahoma}}},
+  shorttitle = {Oklahoma},
+  author = {Money, Jack},
+  year = {2021},
+  month = feb,
+  address = {{Oklahoma City, OK}},
+  journal = {The Oklahoman},
+  language = {en-US}
+}
+
+@article{morrison_gev:2002,
+  title = {Stochastic Modeling of Flood Peaks Using the Generalized Extreme Value Distribution},
+  shorttitle = {Gev},
+  author = {Morrison, Julia E. and Smith, James A.},
+  year = {2002},
+  volume = {38},
+  pages = {41-1-41-12},
+  issn = {1944-7973},
+  doi = {10.1029/2001WR000502},
+  annotation = {\_eprint: https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/2001WR000502},
+  copyright = {Copyright 2002 by the American Geophysical Union.},
+  journal = {Water Resources Research},
+  keywords = {extreme value theory,Floods},
+  language = {en},
+  number = {12}
+}
+
 @article{Screen:2013ho,
   title = {Exploring Links between {{Arctic Amplification}} and Mid-Latitude Weather},
   author = {Screen, James A and Simmonds, Ian},
@@ -125,8 +326,33 @@
   uri = {papers3://publication/doi/10.1002/grl.50174}
 }
 
+@techreport{texaswaterplan:2012,
+  title = {Water for {{Texas}} 2012 State Water Plan},
+  shorttitle = {Plan},
+  author = {Texas Water Development Board},
+  year = {2012},
+  month = jan
+}
+
+@misc{useia_generators:2021,
+  title = {Preliminary Monthly Electric Generator Inventory (Based on {{Form EIA}}-{{860M}} as a Supplement to {{Form EIA}}-860)},
+  shorttitle = {Generators},
+  author = {{USEIA}},
+  year = {2021},
+  month = nov,
+  publisher = {{United States Energy Information Administration}}
+}
+
+@misc{useia_regions:2021,
+  title = {North {{American Electric Reliability Corporation}} ({{NERC}}) {{Regions}}},
+  shorttitle = {Regions},
+  author = {{USEIA}},
+  year = {2021},
+  publisher = {{United States Energy Information Administration}}
+}
+
 @article{waite_heating:2020,
-  title = {Electricity {{Load Implications}} of {{Space Heating Decarbonization Pathways}}},
+  title = {Electricity Load Implications of Space Heating Decarbonization Pathways},
   shorttitle = {Heating},
   author = {Waite, Michael and Modi, Vijay},
   year = {2020},
@@ -141,8 +367,16 @@
   number = {2}
 }
 
+@techreport{white_txresidential:2019,
+  title = {Electrification of Heating in the {{Texas}} Residential Sector},
+  shorttitle = {Tx Residential},
+  author = {White, Philip M and Rhodes, Joshua D},
+  year = {2019},
+  institution = {{IdeaSmiths, LLC}}
+}
+
 @article{williams_decarbonization:2012,
-  title = {The {{Technology Path}} to {{Deep Greenhouse Gas Emissions Cuts}} by 2050: {{The Pivotal Role}} of {{Electricity}}},
+  title = {The Technology Path to Deep Greenhouse Gas Emissions Cuts by 2050: The Pivotal Role of Electricity},
   shorttitle = {Decarbonization},
   author = {Williams, James H. and DeBenedictis, Andrew and Ghanadan, Rebecca and Mahone, Amber and Moore, Jack and Morrow, William R. and Price, Snuller and Torn, Margaret S.},
   year = {2012},
@@ -158,6 +392,21 @@
   language = {en},
   number = {6064},
   pmid = {22116030}
+}
+
+@article{wong_floodrisk:2018,
+  title = {Neglecting Model Structural Uncertainty Underestimates Upper Tails of Flood Hazard},
+  shorttitle = {Floodrisk},
+  author = {Wong, Tony E. and Klufas, Alexandra and Srikrishnan, Vivek and Keller, Klaus},
+  year = {2018},
+  month = jul,
+  volume = {13},
+  pages = {074019},
+  issn = {1748-9326},
+  doi = {10/ghkp8v},
+  journal = {Environmental Research Letters},
+  language = {en},
+  number = {7}
 }
 
 
